# drm_app_neo

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  README.md  build_cross_windows.sh
assets/: ak_bar_1x.c8  ak_bar_2x.c8  btm_left_bar_1x.c8  btm_left_bar_2x.c8  top_left_rect_1x.c8  top_left_rect_2x.c8  top_left_rhodes_1x.c8  top_left_rhodes_2x.c8  top_right_arrow_1x.c8  top_right_arrow_2x.c8  top_right_bar_1x.c8  top_right_bar_2x.c8
cmake/: toolchain-mingw64.cmake
docker/: Dockerfile.mingw
docs/: application_structure.md  ipc_reference.md  overlay_dev_note.md  overlay_elements.md
fuzz/: .gitignore  README.md  build.sh  fuzz_epconfig.c  fuzz_h264.c  fuzz_mp4_demux.c  monkey.sh  run.sh  seed_corpus.sh
fuzz/stubs/ui/: font_registry.h
patch/: lvgl-evdev-keymap.patch
scripts/: collect-dll.sh
sim/: CMakeLists.txt  lv_conf.h  main.c  mock_backend.c  overlay_sim_main.c  overlay_sim_presets.c  overlay_sim_presets.h  run.sh  sim_drm_warpper.c  sim_plane.c  sim_sdl_window.c  sim_sdl_window.h
src/: config.h  drm_warpper.c  drm_warpper.h  jpegint.h  lv_conf.h  main.c  srgn_drm.h  ui_enums.h  ui_metrics.h
src/apps/: apps.c  apps.h  apps_cfg_parse.c  apps_launcher.c  apps_launcher.h  apps_types.h  extmap.c  ipc_common.c  ipc_common.h  ipc_handler.c
src/driver/: drm_warpper.c  drm_warpper.h  drm_warpper_sdl.c  evdev.c  evdev.h  key_enc_evdev.c  key_enc_evdev.h  key_sdl.c  srgn_drm.h
src/fonts/: ui_font_bebas_40.c  ui_font_bebas_bold_10.c  ui_font_bebas_bold_72.c
src/overlay/: opinfo.c  opinfo.h  overlay.c  overlay.h  transitions.c  transitions.h
src/prts/: operators.c  operators.h  prts.c  prts.h
src/render/: c8pal.c  c8pal.h  c8pal_baked.h  fbdraw.c  fbdraw.h  layer_animation.c  layer_animation.h  lvgl_drm_warp.c  lvgl_drm_warp.h  mediaplayer.c  mediaplayer.h  mediaplayer_ffmpeg.c
src/ui/: actions.c  actions_apps.c  actions_displayimg.c  actions_displayimg.h  actions_mainscreen.c  actions_oplist.c  actions_oplist.h  actions_settings.c  actions_sysinfo.c  actions_sysinfo.h  actions_warning.c  actions_warning.h  applist.c  applist.h  battery.c  filemanager.c  filemanager.h  font_registry.c  font_registry.h  gui_app.c  gui_app.h  ipc_helper.c  ipc_helper.h  overlays.c  scr_transition.c  scr_transition.h  ui_theme.c  ui_theme.h  uix_session.c  uix_session.h  uix_types.h
src/ui_screens/: screen_manager.c  screen_manager.h  styles.c  styles.h  ui_backend.h  ui_plane.h  ui_preview.c  ui_preview.h  ui_services.h
src/ui_screens/platform/: ui_backend_device.c  ui_plane_device.c  ui_services_device.c
src/ui_screens/screens/: screen_applist.c  screen_applist.h  screen_common.c  screen_common.h  screen_confirm.c  screen_confirm.h  screen_displayimg.c  screen_displayimg.h  screen_filemanager.c  screen_filemanager.h  screen_mainmenu.c  screen_mainmenu.h  screen_oplist.c  screen_oplist.h  screen_settings.c  screen_settings.h  screen_spinner.c  screen_spinner.h  screen_sysinfo.c  screen_sysinfo.h  screen_usbselect.c  screen_usbselect.h  screen_warning.c  screen_warning.h
src/utils/: cacheassets.c  code128.h  imgscale.c  imgscale.h  misc.c  misc.h  respath.c  respath.h  settings.c  settings.h  spsc_queue.c  spsc_queue.h  timer.c  timer.h  timer_backend.h  timer_backend_posix.c  timer_backend_win32.c  uuid.c  uuid.h
src/vdec/: bitreader.c  h264_dpb.c  h264_parser.c  h264_parser.h  mp4_demux.c  mp4_demux.h  nalu.c  sdrot.c  sdrot.h  vdec_v4l2.c  vdec_v4l2.h
testdata/opinfo_custom/: epconfig.json
tools/: gen_c8.sh  png2c8  png2c8.c  vdec_selftest.c
tools/font_generate/: README.md  export_board_charset.py  subset_fonts.py
